--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,10 @@
   box-sizing: border-box;
 }
 
-.grid-container {
-  width: 70%;
-  display: grid;
-  margin: 0 auto;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 10px;
+ul {
+  list-style-type: none;
 }
 
-.btn {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-}
-
-.btn button {
-  border-style: none;
-  padding: 5px 10px;
-  margin-right: 10px;
-  border-radius: 5px;
-  background: #30a7d7;
-  color: #fff;
-  font-size: 1em;
+a {
+  text-decoration: none;
 }
