--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -7,10 +7,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px;
 }
 
 .Card-img {
   text-align: center;
+  /* padding: 10px 0; */
 }
 
 .Card-img img {
