--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -18,6 +18,8 @@
 
 .Navbar-logo {
   color: white;
+  display: flex;
+  align-items: center;
 }
 
 .Navbar-links {
@@ -30,7 +32,7 @@
   display: inline-block;
   font-weight: bold;
   margin-right: 0.5rem;
-  font-weight: 400;
+  font-weight: 600;
   letter-spacing: 2px;
   font-size: 1.2rem;
   padding: 0.25rem 0.5rem;
@@ -39,4 +41,9 @@
 
 .Navbar-links a:hover {
   color: black;
+}
+
+.logo {
+  height: 2.3rem;
+  margin: 7px;
 }
