--- a/src/pages/page_styles.css
+++ b/src/pages/page_styles.css
@@ -1,5 +1,9 @@
 .section {
   padding: 5rem 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section-title {
