--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -61,6 +61,30 @@
   font-weight: 700;
 } */
 
+.Modal-img img {
+  width: 100%;
+  background-color: lightgrey;
+  border-radius: 10px;
+}
+
+.Modal-types {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.Modal-type {
+  padding: 5px 10px;
+  margin: 10px 0 10px 10px;
+  border-radius: 5px;
+  background: cyan;
+  color: #fff;
+  text-transform: capitalize;
+  width: 100px;
+  text-align: center;
+  font-weight: 700;
+}
+
 .hvr-grow {
   display: inline-block;
   vertical-align: middle;
