--- a/src/components/Pokedex/style.css
+++ b/src/components/Pokedex/style.css
@@ -1,3 +1,14 @@
+/* .Pokedex {
+  margin: 3rem 0;
+} */
+
+.Pokedex-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+}
+
 .grid-container {
   width: 70%;
   display: grid;
@@ -6,13 +17,13 @@
   grid-gap: 10px;
 }
 
-.btn {
+/* .btn {
   display: flex;
   justify-content: center;
   margin: 20px 0;
-}
+} */
 
-.btn button {
+/* .btn button {
   border-style: none;
   padding: 5px 10px;
   margin-right: 10px;
@@ -20,4 +31,4 @@
   background: #30a7d7;
   color: #fff;
   font-size: 1em;
-}
+} */
