Resolved Navbar Link issues by installing react-router-bootstrap. Resolved console 'key' warnings by adding keys to type maps on Card and PokemonModal components.

--- a/src/components/Pokedex/style.css
+++ b/src/components/Pokedex/style.css
@@ -2,6 +2,12 @@
   margin: 3rem 0;
 } */
 
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .Pokedex-buttons {
   display: flex;
   justify-content: center;
