--- a/src/components/PokemonModal/style.css
+++ b/src/components/PokemonModal/style.css
@@ -40,8 +40,7 @@
   color: black;
   border-radius: 10px;
   padding: 10px 0;
-  /* display: flex;
-  flex-direction: column; */
+  margin: 10px 0;
 }
 
 .Modal-info-subtitle {
@@ -50,4 +49,23 @@
 
 .Modal-ability {
   text-transform: capitalize;
+}
+
+.Modal-stats {
+  /* display: flex;
+  justify-content: flex-start;
+  align-items: center; */
+  margin: 5px 0;
+}
+
+.table-row {
+  width: 100%;
+}
+
+.Modal-evolutions {
+  background-color: #6c757d;
+  color: white;
+  border-radius: 10px;
+  padding: 10px 0;
+  margin: 10px 0;
 }
