--- a/src/pages/page_styles.css
+++ b/src/pages/page_styles.css
@@ -24,3 +24,9 @@
   font-weight: 400;
   letter-spacing: 2px;
 }
+
+/* .background {
+  background-image: url(../images/background.jpeg);
+  width: 100vw;
+  height: 100px;
+} */
