--- a/src/components/PokemonModal/style.css
+++ b/src/components/PokemonModal/style.css
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: lightgrey;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .Modal-types {
@@ -18,7 +19,7 @@
   background: cyan;
   color: #fff;
   text-transform: capitalize;
-  width: 100px;
+  width: 80px;
   text-align: center;
   font-weight: 700;
 }
@@ -55,7 +56,7 @@
   /* display: flex;
   justify-content: flex-start;
   align-items: center; */
-  margin: 5px 0;
+  /* margin: 5px 0; */
 }
 
 .table-row {
