Implemented SearchPokemon functionality and reorganized helper functions.

--- a/src/components/Pokedex/style.css
+++ b/src/components/Pokedex/style.css
@@ -8,6 +8,13 @@
   align-items: center;
 }
 
+.Pokedex-search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
 .Pokedex-buttons {
   display: flex;
   justify-content: center;
