--- a/src/pages/page_styles.css
+++ b/src/pages/page_styles.css
@@ -25,11 +25,9 @@
   letter-spacing: 2px;
 }
 
-/* .background {
-  background-image: url(../images/background.jpeg);
-  width: 100vw;
-  height: 100px;
-} */
+.about-image-container img {
+  height: 20rem;
+}
 
 .jumbotron {
   display: flex;
@@ -42,6 +40,7 @@
   width: 50%;
   border-radius: 10px;
   padding: 20px;
+  margin: 0 0 0 5rem;
 }
 .jumbotron-title {
   font-size: 4rem;
@@ -49,4 +48,11 @@
 
 .jumbotron-button {
   margin-right: 10px;
+}
+
+.Search-bar {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  margin: 2rem 0;
 }
