--- a/src/components/Pokedex/style.css
+++ b/src/components/Pokedex/style.css
@@ -27,7 +27,16 @@
   display: grid;
   margin: 0 auto;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 10px;
+  grid-gap: 20px;
+  justify-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* .btn {
