--- a/src/components/Pokedex/style.css
+++ b/src/components/Pokedex/style.css
@@ -36,10 +36,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
   }
-  .Pokedex-card {
-    margin-bottom: 10px;
-  }
+  /* .Pokedex-card {
+    margin-bottom: 30px;
+  } */
 }
 
 /* .btn {
