--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -47,3 +47,22 @@
   font-weight: 400;
   color: gray;
 }
+
+@media only screen and (max-width: 768px) {
+  .Card-img img {
+    height: 9rem;
+  }
+  .Card-button {
+    background-color: grey;
+    color: white;
+    border-radius: 5px;
+    padding: 8px 15px;
+    margin: 5px 0;
+    font-weight: 700;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .Card-button {
+    display: none;
+  }
+}
