--- a/src/components/SearchDisplay/style.css
+++ b/src/components/SearchDisplay/style.css
@@ -64,10 +64,9 @@
   background-color: grey;
   color: white;
   border-radius: 10px;
-  padding: 20px 20px;
+  padding: 10px 20px;
   margin: 10px 0;
   width: 100%;
-  /* max-height: 35vh; */
   display: flex;
   flex-direction: column;
 }
@@ -75,19 +74,6 @@
 .Search-evolutions-title {
   font-size: 2rem;
 }
-
-/* .Search-evolutions-images-1 {
-  display: flex;
-  justify-content: space-around;
-}
-.Search-evolutions-images-2 {
-  display: flex;
-  justify-content: space-around;
-}
-.Search-evolutions-images-3 {
-  display: flex;
-  justify-content: space-around;
-} */
 
 .Search-evolutions-images {
   display: flex;
@@ -108,10 +94,11 @@
   background-color: white;
   border-radius: 50%;
   padding: 10px;
-  margin: 10px 0;
+  margin: 5px 0;
 }
 
 .Search-evolution-name {
   text-transform: capitalize;
   font-size: 1.25rem;
+  margin-bottom: 5px;
 }
